--- a/Tutorial/Part6/Exercises/DTDP Module - Analyses of Individual Texts.ipynb
+++ b/Tutorial/Part6/Exercises/DTDP Module - Analyses of Individual Texts.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Concordances\n",
     "\n",
-    "This notebook explains how you can use the dtdpTdm module to perform a number of basic text and data mining operations both at the level of individual texts and at the level of full corpora. This module was developed specifically for the 2018-2019 course *Digital Text and Data Processing*. The first few examples shall focus on analayses of individual texts. \n",
+    "This notebook explains how you can use the dtdpTdm module to perform a number of basic text and data mining operations both at the level of individual texts and at the level of full corpora. This module was developed specifically for the 2018-2019 course *Digital Text and Data Processing*. The module can be downloaded here:\n",
+    "\n",
+    "https://raw.githubusercontent.com/peterverhaar/dtdp/master/dtdpTdm.py\n",
+    "\n",
+    "The first few examples shall focus on analayses of individual texts. \n",
     "\n",
     "The dtdpTdm module can firstly be used to produce concordances, or keyword in context lists. In a concordance, all the occurrences of a given search term are shown in combination with words that occur before and after this term. In the dtdpTdm module, users need to supply the name of the file and the regular expression the computer needs to search for in this file. Users can can specify the length of the fragments in the concordance using the third paramater. The number that is provided thirdly determines the number of characters that will be shown before and after the search result.\n"
    ]
