--- a/Tutorial/Part6/Exercises/DTDP Module - Analyses of full corpora.ipynb
+++ b/Tutorial/Part6/Exercises/DTDP Module - Analyses of full corpora.ipynb
@@ -107,7 +107,9 @@
     "\n",
     "Create a scatter plot which visualises both the average length of words (i.e. the average number of syllables per word) and the average length of sentences (i.e. the number of words).\n",
     "\n",
-    "For this exercise, you may want to reuse code from exercise 4.4.: https://github.com/peterverhaar/dtdp/blob/master/Tutorial/Part4/Exercises/exercise4-4.py"
+    "For this exercise, you may want to reuse code from exercise 4.4.: \n",
+    "\n",
+    "https://github.com/peterverhaar/dtdp/blob/master/Tutorial/Part4/Exercises/exercise4-4.py"
    ]
   },
   {
