--- a/FinalAssignment/Data creation.ipynb
+++ b/FinalAssignment/Data creation.ipynb
@@ -15,137 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analysing ARoomWithaView.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/ARoomWithaView.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing ATaleofTwoCities.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/ATaleofTwoCities.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing HeartofDarkness.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/HeartofDarkness.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing Ivanhoe.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/Ivanhoe.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing MobyDick.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/MobyDick.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing PrideandPrejudice.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/PrideandPrejudice.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing SonsandLovers.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/SonsandLovers.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing ThroughtheLookingGlass.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/ThroughtheLookingGlass.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing TreasureIsland.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/TreasureIsland.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "Analysing VanityFair.txt ...\n",
-      "Number of tokens\n",
-      "Calculating type-token ratio\n",
-      "Number of sentences\n",
-      "Number of syllables\n",
-      "Number of nouns\n",
-      "Adding POS tags for Corpus/VanityFair.txt ...\n",
-      "Number of adjectives\n",
-      "Number of adverbs\n",
-      "Flesch-Kincaid\n",
-      "References to religion\n",
-      "References to politics\n",
-      "The data set has been created. The name of the file is 'data.csv' \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import re\n",
@@ -243,7 +115,14 @@
     "\n",
     "out.close()\n",
     "\n",
-    "print(\"The data set has been created. The name of the file is 'data.csv' \")\n"
+    "print(\"\\nThe data set has been created. The name of the file is 'data.csv' \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To download the lexicon files that are references in the code above, run the code below. "
    ]
   },
   {
@@ -251,25 +130,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "To download the lexicon files that are references in the code above, run the code below. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloading https://raw.githubusercontent.com/peterverhaar/dtdp/master/Texts/Politics.txt ...\n",
-      "downloading https://raw.githubusercontent.com/peterverhaar/dtdp/master/Texts/Religion.txt ...\n",
-      "All files have been downloaded.\n"
-     ]
-    }
-   ],
    "source": [
     "import urllib.request\n",
     "import re\n",
@@ -301,13 +161,6 @@
     "    \n",
     "print('All files have been downloaded.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
